# QIcomPCR

./: CMakeLists.txt  CMakeLists.txt.user.2.1pre1  CMakeLists.txt.user.2.6pre1  CPackConfig.cmake  ConfigureChecks.cmake  LICENSE  QIcom.cppcheck  README  README.md  bcpp.config  config.h.cmake  index.html
Web/: app.js  package.json
Web/models/: appserver.js  socketserver.js  soundserver.js  tcpsocket.js
Web/public/: SpeexAudio.jnlp  index.html  test.html
Web/public/js/: main.js
Web/public/js/models/: frequencytable.js  remote.js  sound.js
Web/public/js/views/: bandscope.js  controls.js  dbgwin.js  decoder.js  display.js  frequency.js  frequencystep.js  radio.js  signal.js  status.js  viewer.js  viewer2d.js  wheel.js
Web/public/stylesheets/: knobKnob.css  style.css
cmake/Modules/: DefineCompilerFlags.cmake  FindQwt.cmake
css/: main.css
src/: CAcars.cpp  CAcars.h  CAcarsGPL.cpp  CAcarsGPL.h  CAppOpts.h  CApplication.cpp  CApplication.h  CCommand.cpp  CCommand.h  CDebugWindow.cpp  CDebugWindow.h  CDemodulator.cpp  CDemodulator.h  CDevicePCR2500.cpp  CDevicePCR2500.h  CFft.cpp  CFft.h  CLcdWidget.cpp  CLcdWidget.h  CMainWindow.cpp  CMainWindow.h  CMainWindow.ui  CMakeLists.txt  CMorse.cpp  CMorse.h  CPogsag.cpp  CPogsag.h  CPortAudio.cpp  CPortAudio.h  CPulseSound.cpp  CPulseSound.h  CRemoteControl.cpp  CRemoteControl.h  CSound.cpp  CSound.h  CSoundFile.cpp  CSoundFile.h  CSpectrumWidget.cpp  CSpectrumWidget.h  CStatusWidget.cpp  (+11 more)
src/backend/: CBackend.cpp  CBackend.h  CFir.cpp  CFir.h  CIir.cpp  CIir.h  CRemoteControl.cpp  CRemoteControl.h  CSettings.cpp  CSettings.h  CWindowFunc.cpp  CWindowFunc.h  IDecoder.cpp  IDecoder.h  IDemodulator.cpp  IDemodulator.h  IDevice.cpp  IDevice.h  ISound.cpp  ISound.h  consts.h
src/backend/demodulator/: CAm.cpp  CAm.h  CDemodulator.cpp  CDemodulator.h  CDemodulatorBase.cpp  CDemodulatorBase.h  CDemodulatorFactory.cpp  CDemodulatorFactory.h  CFft.cpp  CFft.h  CFm.cpp  CFm.h  CSsb.cpp  CSsb.h  IDemodulator.cpp  IDemodulator.h  cfm.cpp  cfm.h
src/backend/devices/pcr2500/: CCommand.cpp  CCommand.h  CDevicePCR2500.cpp  CDevicePCR2500.h
src/backend/devices/rtlsdr/: CBandScopeWorker.cpp  CBandScopeWorker.h  CCommand.cpp  CCommand.h  CRtlSdr.cpp  CRtlSdr.h  CVirtualSound.cpp  CVirtualSound.h
src/backend/filter/: CFir.cpp  CFir.h  CIir.cpp  CIir.h
src/backend/sound/: CPortAudio.cpp  CPortAudio.h  CSound.cpp  CSound.h  CSoundFile.cpp  CSoundFile.h  CSoundStream.cpp  CSoundStream.h
src/decoder/: CAcarsGPL.cpp  CAcarsGPL.h  CDecoder.cpp  CDecoder.h  CMorse.cpp  CMorse.h  CPogsag.cpp  CPogsag.h  CRtty.cpp  CRtty.h  ctype.c
src/gui/: CDlgSettings.cpp  CDlgSettings.h  CDlgSettings.ui  CMainWindow.cpp  CMainWindow.h  CMainWindow.ui
src/gui/qml/QRadioSDR/: Bargraph.qml  CustomPlotItem.cpp  CustomPlotItem.h  Knob.qml  QRadioSDR.pro  main.cpp  main.qml  qml.qrc
src/gui/widget/: AdvPlotZoomer.cpp  AdvPlotZoomer.h  CBandScope.cpp  CBandScope.h  CDebugWindow.cpp  CDebugWindow.h  CDisplay.cpp  CDisplay.h  CLcdWidget.cpp  CLcdWidget.h  CSpectrumWidget.cpp  CSpectrumWidget.h  CStatusWidget.cpp  CStatusWidget.h  CwPicker.cpp  CwPicker.h  RttyPicker.cpp  RttyPicker.h  ThresholdPicker.cpp  ThresholdPicker.h
usb/: Serial_settings.txt~  pulsedevlist  pulsedevlist.c
usb/pcr1000/pcrd-0.12/: Makefile  pcrd  pcrd.c  pcrd_rel_notes.html
usb/pcr1000/python/: PyPCR1000.ini
